<resources>
    <string name="app_name">ByteBills</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My Portfolio</string>
    <string name="menu_mybills">My Bills</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Log In</string>
    <string name="menu_registration">Registration</string>
    <string name="stock_name">STOCK NAME</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_title">Confirm deletion</string>
    <string name="confirm_delete_message">Do you really want to delete this Stock?</string>
    <string name="cancel">Cancel</string>
    <string name="stock_id">Stock ID</string>
    <string name="last_update_date">Last update date</string>
    <string name="total">TOTAL VALUE</string>
    <string name="final_balance">FINAL BALANCE</string>
    <string name="value_diff">Value Diff.</string>
    <string name="percent_diff">Percent Diff.</string>
    <string name="menu_stockvalue">Stock Value</string>
    <string name="sesion_graph">SESSION GRAPH</string>
    <string name="language">Language</string>
    <string name="spinner_title">Language</string>
    <string name="applyChanges">Apply Changes</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="purchase_value">Purchase Value</string>
    <string name="current_value">Current Value</string>
    <string name="difference">Difference</string>
    <string name="operation_state">Operation State</string>
    <string name="open">Open</string>
    <string name="dividends">Dividends</string>
    <string name="purchases">Purchases</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="register">REGISTER</string>
    <string name="sign_in">Sign in</string>
    <string name="username_1">Username</string>
    <string name="password_2">Password</string>
    <string name="login_2">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="add_transaction">Add transaction</string>
    <string name="transactiontype">TransactionType</string>
    <string name="dividend">Dividend</string>
    <string name="purchase">Purchase</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="stock_price">Stock Price</string>
    <string name="date">Date</string>
    <string name="add_transaction_2">ADD TRANSACTION</string>
    <string name="add_value">Add value</string>
    <string name="value_symbol">Value symbol</string>
    <string name="crypto">Crypto</string>
    <string name="stock">Stock</string>
    <string name="value_symbol_2">Value Symbol</string>
    <string name="add_stock">ADD STOCK</string>
    <string name="mostCommon">Most Common Asset</string>
    <string name="topAsset">TOP ASSET</string>
    <string name="assetCount">ASSET COUNT</string>
    <string name="top3">Top 3 Assets</string>
</resources>