<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewStockName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:hint="@string/stock_name"/>

        <TextView
            android:id="@+id/textViewStockId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewStockName"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:hint="@string/stock_id"/>

        <TextView
            android:id="@+id/textViewUpdateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewStockId"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:hint="@string/last_update_date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/textViewUpdateDate"
            android:weightSum="3">
            <TextView
                android:id="@+id/textViewCurrentPrice"
                android:layout_width="0dp"
                android:layout_weight="1"                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:hint="3000.09€"/>

            <TextView
                android:id="@+id/textViewSessionDelta"
                android:layout_width="0dp"
                android:layout_weight="1"                android:layout_height="wrap_content"
                android:layout_below="@id/textViewStockId"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:hint="+2,67%"/>

            <Button
                android:id="@+id/buttonDeleteStock"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:backgroundTint="#FF1100"
                android:textColor="@android:color/white"
                android:layout_alignParentEnd="true"/>

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>